--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EmojiClicker</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
+    <script src="js/app.js" defer></script>
 </head>
 <body>
     <div id="header">
         <h1>Emoji Clicker</h1>
-        <p>Pontos: </p>
+        <p>Pontos: <span id="pontos">0</span></p>
     </div>
 
     <div id="game-area">
         
     </div>
 
-    <h2>Historico</h2>
+    <h2>Histórico</h2>
     <ul id="historico"></ul>
 </body>
 </html>
